Сделал коллекцию изменяемой