@@ -11,6 +11,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class RandomUserProvider implements IUserProvider {
@@ -105,7 +106,7 @@ public class RandomUserProvider implements IUserProvider {
                     return null;
                 })
                 .limit(size)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
